# KairosEngine

./: .gitmodules  CMakeLists.txt  GenerateProject.bat  README.md  imgui.ini
Applications/: CMakeLists.txt
Applications/HelloTriangle/: CMakeLists.txt  apppch.h
Applications/HelloTriangle/Source/: App.cpp  App.h  main.cpp
Applications/MeshRenderer/: CMakeLists.txt  apppch.h
Applications/MeshRenderer/Source/: MeshRenderer.cpp  MeshRenderer.h  main.cpp
AssetBaker/: CMakeLists.txt  asset_main.cpp
AssetLib/: AssetLoader.cpp  AssetLoader.h  CMakeLists.txt  MeshAsset.cpp  MeshAsset.h  TextureAsset.cpp  TextureAsset.h
Data/assets_export/: Cerberus.mesh  Chair.mesh  Chest.mesh  Cube.mesh  Plane.mesh  firehydrant.mesh  skybox.mesh  sphere.mesh  suzanne.mesh
Data/scenes/: chest.json
Data/shaders/: Camera.hlsl  Constants.hlsl  EngineMain.hlsl  EntryPoint.hlsl  GBufferMesh.hlsl  GenerateMips.hlsl  Lighting.hlsl  Mesh.hlsl  PixelShader.hlsl  ShaderMath.hlsl  Vertex.hlsl  downsample.hlsl  equirect2cube.hlsl  irmap.hlsl  pbr.hlsl  phong.hlsl  skybox.hlsl  spbrdf.hlsl  spmap.hlsl  tessalation.hlsl  test.hlsl  textureviewer.hlsl  tonemap.hlsl  water.hlsl  white.hlsl
Data/textures/assets_export/: chest_M.tx  firehydrant_M.tx  firehydrant_R.tx  wall_A.tx
KairosEngine/: API.h  CMakeLists.txt  KairosAPI.h  krspch.h
KairosEngine/Engine/: krspch.h
KairosEngine/Engine/Core/: Application.cpp  Application.h  ApplicationEntry.cpp  ApplicationEntry.h  AssetManager.cpp  AssetManager.h  BaseTypes.h  BitwiseEnum.h  ClassTemplates.h  EngineCore.h  EngineMath.h  Filesystem.cpp  Filesystem.h  Input.cpp  Input.h  KeyCodes.h  Log.cpp  Log.h  MouseCodes.h  NonCopyable.h  Window.cpp  Window.h
KairosEngine/Engine/Core/Events/: Event.h  KeyEvent.h  MouseEvent.h  WindowEvent.h
KairosEngine/Engine/Editor/: EditorCamera.cpp  EditorCamera.h  EngineIMGUI.cpp  EngineIMGUI.h
KairosEngine/Engine/Framework/: Camera.cpp  Camera.h  Scene.cpp  Scene.h
KairosEngine/Engine/Graphics/Core/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  CommandAllocatorPool.h  CommandContext.cpp  CommandContext.h  CommandQueue.cpp  CommandQueue.h  Cubemap.cpp  Cubemap.h  DescriptorHeap.cpp  DescriptorHeap.h  DynamicDescriptorHeap.cpp  DynamicDescriptorHeap.h  EngineFactory.cpp  EngineFactory.h  Fence.cpp  Fence.h  GraphicsTypes.h  Image.cpp  Image.h  LinearAllocator.cpp  LinearAllocator.h  Mesh.cpp  Mesh.h  PipelineStateObject.cpp  PipelineStateObject.h  RenderDevice.cpp  RenderDevice.h  Renderer.cpp  Renderer.h  Resource.cpp  Resource.h  RootSignature.cpp  RootSignature.h  Shader.cpp  Shader.h  SwapChain.cpp  SwapChain.h  (+2 more)
KairosEngine/Engine/Graphics/Shaders/: BasicMesh.hlsl  BasicTransform.hlsl  BasicTransformPixel.hlsl  Constants.hlsl  PixelShader.hlsl  VertexShader.hlsl  pbr.hlsl  phong.hlsl  skybox.hlsl  tonemap.hlsl  white.hlsl
KairosEngine/Engine/RenderBackend/: Buffer.h  BufferManager.cpp  BufferManager.h  CommandAllocatorPool.cpp  CommandAllocatorPool.h  CommandContext.cpp  CommandContext.h  CommandQueue.cpp  CommandQueue.h  DX12RenderBackend.cpp  DX12RenderBackend.h  DX12Util.h  DescriptorHeap.cpp  DescriptorHeap.h  DynamicDescriptorHeap.cpp  DynamicDescriptorHeap.h  GraphicsTypes.h  Mesh.cpp  Mesh.h  MipMapGenerator.cpp  MipMapGenerator.h  PipelineState.cpp  PipelineState.h  PipelineStateManager.cpp  PipelineStateManager.h  RenderDevice.cpp  RenderDevice.h  RenderGraph.cpp  RenderGraph.h  RenderPass.cpp  RenderPass.h  RenderScene.cpp  RenderScene.h  Resource.h  ResourceStorage.cpp  ResourceStorage.h  RootSignature.cpp  RootSignature.h  Shader.cpp  Shader.h  (+8 more)
KairosEngine/Engine/RenderBackend/RHI/: Buffer.cpp  Buffer.h  BufferManager.cpp  BufferManager.h  CommandAllocatorPool.cpp  CommandAllocatorPool.h  CommandContext.cpp  CommandContext.h  CommandQueue.cpp  CommandQueue.h  ContextManager.cpp  ContextManager.h  DX12Util.h  Descriptor.cpp  Descriptor.h  DescriptorHeap.cpp  DescriptorHeap.h  Fence.cpp  Fence.h  GPUResource.cpp  GPUResource.h  GraphicsTypes.cpp  GraphicsTypes.h  PipelineState.cpp  PipelineState.h  PipelineStateManager.cpp  PipelineStateManager.h  RenderDevice.cpp  RenderDevice.h  RenderDevice.inl  ResourceFormat.cpp  ResourceFormat.h  RootSignature.cpp  RootSignature.h  Shader.h  ShaderCompiler.cpp  ShaderCompiler.h  ShaderManager.cpp  ShaderManager.h  SwapChain.cpp  (+7 more)
KairosEngine/Engine/RenderBackend/RenderPasses/: EnvironmentMap.cpp  EnvironmentMap.h  GBufferPass.cpp  GBufferPass.h  GenerateMips.cpp  GenerateMips.h  SkyboxPass.cpp  SkyboxPass.h  TonemapPass.cpp  TonemapPass.h
KairosEngine/Engine/RenderBackend/Scene/: Lights.cpp  Material.cpp  Material.h  Mesh.h  MeshComponent.cpp  MeshComponent.h  Scene.cpp  Scene.h
KairosEngine/Engine/Scene/: Camera.cpp  Camera.h  Lights.h  Mesh.cpp  Mesh.h  Scene.cpp  Scene.h  SceneGPUStorage.cpp  SceneGPUStorage.h
KairosEngine/Engine/Systems/: CVarSystem.cpp  CVarSystem.h  D3DWindowSurface.cpp  D3DWindowSurface.h  Engine.cpp  Engine.h  GUISystem.cpp  GUISystem.h  InputSystem.cpp  InputSystem.h  WinWindowSystem.cpp  WinWindowSystem.h
KairosEngine/Engine/Systems/Interface/: ICVarSystem.h  IEngine.h  IEventSystem.h  IGUISystem.h  IInputSystem.h  IRenderBackend.h  ISystem.h  IWindowSurface.h  IWindowSystem.h
KairosEngine/Engine/Util/: JSONUtil.cpp  JSONUtil.h  StringUtils.h
